# unity-3d-display

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  launch-app.sh  launch-unity.sh  package.json
.claude/: settings.local.json
.claude/skills/ci-monitor/: SKILL.md
.github/workflows/: build-native.yml
Editor/: DisplayXRCameraEditor.cs  DisplayXRDisplayEditor.cs  DisplayXRPlayerSettings.cs  DisplayXRPreviewSession.cs  DisplayXRPreviewWindow.cs  DisplayXRSettingsProvider.cs  Monado3DCameraEditor.cs  Monado3DDisplayEditor.cs  Monado3DPreviewWindow.cs  Monado3DSettingsProvider.cs  com.displayxr.unity.editor.asmdef  com.monado.display3d.editor.asmdef
Runtime/: AssemblyInfo.cs  DisplayXRCamera.cs  DisplayXRDisplay.cs  DisplayXRDisplayInfo.cs  DisplayXRFeature.cs  DisplayXRGameViewOverlay.cs  DisplayXRInputController.cs  DisplayXRNative.cs  DisplayXRPreview.cs  DisplayXRRigManager.cs  DisplayXRTunables.cs  DisplayXRWindowSpaceUI.cs  Monado3DCamera.cs  Monado3DDisplay.cs  Monado3DDisplayInfo.cs  Monado3DFeature.cs  Monado3DNative.cs  Monado3DPreview.cs  Monado3DTunables.cs  Monado3DWindowSpaceUI.cs  com.displayxr.unity.asmdef  com.monado.display3d.asmdef
Runtime/Plugins/macOS/displayxr_unity.bundle/Contents/: Info.plist
Runtime/Plugins/macOS/displayxr_unity.bundle/Contents/MacOS/: displayxr_unity
Runtime/Plugins/macOS/monado3d_unity.bundle/Contents/: Info.plist
Runtime/Plugins/macOS/monado3d_unity.bundle/Contents/MacOS/: monado3d_unity
Samples~/BasicScene/: BasicSceneSetup.cs  README.md
Samples~/DisplayScene/: DisplaySceneSetup.cs  README.md
docs/: quick-start-guide.md
native~/: CMakeLists.txt  build-mac.sh  build-win.bat  build-win.sh  camera3d_view.c  camera3d_view.h  display3d_view.c  display3d_view.h  displayxr_d3d11_backend.cpp  displayxr_d3d12_backend.cpp  displayxr_extensions.h  displayxr_hooks.cpp  displayxr_hooks.h  displayxr_hooks_internal.h  displayxr_kooima.cpp  displayxr_kooima.h  displayxr_metal.h  displayxr_metal.m  displayxr_metal_backend.cpp  displayxr_opengl_backend.cpp  displayxr_opengles_backend.cpp  displayxr_readback.cpp  displayxr_readback.h  displayxr_shared_state.cpp  displayxr_shared_state.h  displayxr_standalone.cpp  displayxr_standalone.h  displayxr_standalone_d3d11.cpp  displayxr_standalone_d3d12.cpp  displayxr_standalone_internal.h  displayxr_standalone_metal.h  displayxr_standalone_metal.m  displayxr_standalone_metal_backend.cpp  displayxr_standalone_opengl.cpp  displayxr_standalone_opengles.cpp  displayxr_standalone_vulkan.cpp  displayxr_vulkan_backend.cpp  displayxr_win32.c  displayxr_win32.h  monado3d_extensions.h  (+11 more)
